More work on chapter 7.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -559,9 +559,9 @@ Waterworth and Waterworth present the \textit{three dimensions of virtual experi
 
 In the three dimensions of virtual experience model:
 \begin{itemize}
-	\item The \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from.
-	\item The \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning and perceptual/concrete processing, where complex conceptual reasoning (or `distraction' from percepts~\cite{Chalmers2014}) results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}.
-	\item The \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix of both, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept clarified by the authors:
+	\item The \textbf{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from.
+	\item The \textbf{focus of attention} axis represents the balance between conceptual/abstract reasoning and perceptual/concrete processing, where complex conceptual reasoning (or `distraction' from percepts~\cite{Chalmers2014}) results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}.
+	\item The \textbf{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix of both, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept clarified by the authors:
 
 \begin{quote}
 	\textit{``Presence arises from active awareness of our embodiment in a present world around us. Presence is not consciousness, and we may be highly conscious while feeling absent, at those times when we are relatively unaware of our own embodiment.''}~\cite{Waterworth2014}
@@ -638,7 +638,7 @@ This difference between the Steed and Waterworth uses of break in presence can b
 %=========================================================================================================
 
 \subsection{Visualising Transitions and the Extended Vacancy Problem}
-
+\label{visualising-transitions-extended-vacancy}
 Visualised using the combined Milgram/Waterworth model, the transitions of a parallel reality system are an oscillation between two different positions upon the locus of attention axis. Figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition} shows an example where a user performs a smooth transition between perceiving stimuli from a fully real environment and a fully virtual environment.
 
 \begin{figure}[h]
@@ -658,7 +658,7 @@ Transitions between the virtual world and the real world can be implemented in m
 With Lifton's vacancy being visualised upon the combined model as the largely singular nature of a user's position upon the locus of attention axis (section \ref{combined-milgram-waterworth-model}) and the parallel reality concept hoping to allow users to more freely oscillate between two positions upon the locus of attention axis, success in mitigating deflections upon the focus of attention axis when performing transitions, allowing multiple positions upon the locus of attention axis to be occupied, can be related to success in mitigating vacancy. This observation leads to an extended definition of the vacancy problem:
 
 \begin{quote}
-	\textbf{The Extended Vacancy Problem} - Performing a transition between two environments upon the locus of attention axis of the combined Milgram/Waterworth model is accompanied by a deflection upon the focus of attention axis from presence towards absence.
+	\textbf{The Extended Vacancy Problem} - Performing a transition between two environments upon the locus of attention axis of the combined Milgram/Waterworth model is accompanied by a break in presence manifesting as a deflection upon the focus of attention axis from presence towards absence.
 \end{quote}
 
 By investigating several different transition implementations, identifying and quantifying preferences toward them in different situational states, this thesis explores the relationships between transitions and the successful mitigation of the extended vacancy problem.
