--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -52,13 +52,9 @@ As listed in section \ref{intro-contributions} the contributions of this thesis 
 
 %=========================================================================================================
 
-\section{Discussion}
+\section{Objectives}
 
-%=========================================================================================================
-
-\subsection{Objectives}
-
-In reference to the objectives as listed in section \ref{objectivesandmethodology} and reproduced here for discussion, this thesis has met what it set out to.
+In reference to the objectives as listed in section \ref{objectivesandmethodology} and reproduced here for discussion, this thesis has been successful in meeting what set out to do.
 
 \begin{enumerate}
 	\item[1] Introduce the parallel reality concept by situating it within the larger ecosystem of existing categories of alternate reality, through a thorough exploration of existing alternate reality definitions, taxonomies and frameworks, performing updates, modifications and extensions where required.
@@ -76,7 +72,7 @@ It is important to appreciate that much of it is subjective however. Lots of abs
 
 As one of the direct products of the work discussed for objective 1, the combined Milgram/Waterworth model was produced for this purpose and represents an indispensable tool for visualising, discussing and comparing alternate reality experiences. By combining the relatively objective assessment of where the percepts a user is perceiving originate from (the Milgram and Kishino approach) with the more subjective and experiential assessment of the direction and magnitude of human attention (the Waterworth and Waterworth approach) we are gifted the ability to assess both vantages onto an alternate reality experience and to more easily relate them and see any relationships.
 
-One of these relationships that becomes apparent when considering the two original models combined in the manner of the combined Milgram/Waterworth model is that of how the vacancy problem, as identified by Lifton, can be explained in a more scientific fashion in reference both to the Milgram and Kishino model and to the Waterworth and Waterworth model, leading to the introduction of the definition of the extended vacancy problem.
+One of these relationships that becomes apparent when considering the two original models combined in the manner of the combined Milgram/Waterworth model is that of how the vacancy problem, as identified by Lifton, can be explained in a more scientific fashion in reference both to the Milgram and Kishino model and to the Waterworth and Waterworth model, leading to the introduction of the definition of the extended vacancy problem (section \ref{visualising-transitions-extended-vacancy}).
 
 \begin{enumerate}
 	\item[3] Develop a parallel reality system suitable for deployment to real world user studies to effect comparison against previous categories of alternate reality.
@@ -99,9 +95,9 @@ The development and evaluation of the VTW platform highlighted the importance of
 
 While the physical manifestation of the Mirrorshades platform is far less convenient and far more `research equipment' than VTW, due to the fact that it fills a satchel that must be worn by the user and also occupies both of their hands with equipment, it fully realised the envisaged experience of parallel reality and did so with higher graphical performance and quality along with higher orientation and position tracking quality thanks to the adoption of a more suitable software environment coupled with a new stereoscopic 3D HMD.
 
-
 \begin{enumerate}	
 	\item[4] Identify and put into practice suitable assessment techniques to ascertain the merit of parallel reality in relation to previous categories of alternate reality.
+	\item[5] Identify aspects of the implementation of a parallel reality system that positively or negatively effect the user experience, along with assessment methodologies to ascertain these effects, putting these into practice within real world user studies.
 \end{enumerate}
 
 Here once again the inherently subjective nature of real and virtual space experience make such an assessment difficult. However with the utility of the combined Milgram/Waterworth model and the extended vacancy problem definition, a combination of both qualitative and quantitative results led to a number of interesting observations and discoveries.
@@ -109,68 +105,79 @@ Here once again the inherently subjective nature of real and virtual space exper
 subjective and presence
 
 The novel nature of a parallel reality experience, promoting the interaction with two discrete environments rather than with one mixed environment or only a virtual environment at the complete suppression of the real environment, led to an interesting challenge where no widely adopted presence questionnaire could be directly applied to the experiences. However by realising that the categorical design of the igroup presence questionnaire allowed the different aspect of a parallel reality system to be separated from more traditional VR experiences allowed it to be applied to this new category of alternate reality and served to reinforce with more quantitative values what was being observed in qualitative feedback.
-	
-\begin{enumerate}
-	\item[5] Identify aspects of the implementation of a parallel reality system that positively or negatively effect the user experience, along with assessment methodologies to ascertain these effects, putting these into practice within real world user studies.
-\end{enumerate}
 
 \begin{enumerate}
 	\item[6] Evaluate user studies to inform creation of best practise recommendations for future parallel reality endeavours.
 \end{enumerate}
 
+As listed in section \ref{best-practices-for-parallel-reality} a number of best practices for future parallel reality endeavours were created.
 
+These best practices are presented as observations from an initial investigation into a new category of alternate reality. The small number of participants, their limited age range and the use of a single case study within the context of cultural heritage prevents any detailed, low level claims as to the best manners in which to implement particular features of a parallel reality system. But as initial evidence that justifies more detailed work, they hope to help direct the design and implementation of future parallel reality endeavours without presumptuously attempting to prescribe specifics of individual features for which sufficient data and observations are not yet available.
+
+These best practices cover technology based aspects, such as the importance of intelligently choosing hardware and software environments to provide the best graphical quality as possible, aspects mitigating limitations of technology that are not as easy/possible to overcome, such as intelligently handling inaccuracies in position tracking, and the more subjective/experiential aspects relating to how implementation of transitions between real and virtual environments affect user experience, utility of the system and overall enjoyment.
 
 
 
 Critical analysis of the consequences and impact of the research
 
-Broader set of findings
+
 
 Talk about the lot of hitherto unknown facts and preferences that have now been revealed
 
 
 
-
 %=========================================================================================================
 
-\subsection{Shortcomings}
+\section{Emergent Preference Toward RW/VR Mix}
 
-%=========================================================================================================
+The style of interaction originally envisaged for a parallel reality system, and cemented by the conscious recognition of the divide between the environmental and experiential aspects of the parallel reality definition, was one of switching wholly between discrete real and virtual environments.
 
-\subsection{Emergent Preferences Toward AR Style Mix}
+The VTW platform did not allow this envisaged style of interaction to manifest, due largely to the manner in which the virtual environment only ever filled a small window of the user's viewport that otherwise contained purely real environment visuals.
 
-Looking back to the intro of chapter 1
-
-This is not an augmented reality system which superimposes virtual objects upon the real
-world.
-
-emphasis is on objects and their individual nature, vs the entire virtual environment of a parallel reality system
+While the Mirrorshades platform allowed the envisaged style of interaction to manifest, the stage 2.1 evaluation indicated that users found the ability to view a mix of both real and virtual environments simultaneously to be enjoyable and useful. The stage 2.2 evaluation further supported these findings.
 
 
+At the very beginning of this thesis, in the introduction to chapter \ref{introduction}, the example scenario being described makes the following distinction:
+
+\begin{quote}
+	\textit{This is not an augmented reality system which superimposes virtual objects upon the real world.}
+\end{quote}
+
+And later when formally introducing parallel reality in section \ref{parallelrealityinbackground} is the following:
+
+\begin{quote}
+	\textit{In this regard we further distinguish a parallel reality system from an augmented reality system by defining the former as allowing its user to switch between two different primary environments whereas the latter augments one particular primary environment.}
+\end{quote}
+
+lies in consideration of the environmental and experiential aspects identified in section \ref{real-world-experience-of-vtw}.
+
+while the evaluations showed that a mixed view was preferred
+
+and that mixed view alone would seem experientially very similar to previous AR systems
+
+the distinction of the environmental aspect means that the user can additionally choose to view either complete, discrete environment wholly on its own at the complete exclusion of the other, something not possible with the traditional view of AR in which only individual virtual objects exist rather than an entire virtual environment
 
 
-and in section 2.4 where we said
+thus as mentioned in section \ref{stage-2-2-summary} the ultimate realisation of a parallel reality system is indicated to be one that presents the mixed view that is essentially AR, but \textbf{additionally} allows transitions to wholly real and wholly virtual
 
-In this regard we further distinguish a parallel reality system from an augmented
-reality system by defining the former as allowing its user to switch between two different primary
-environments whereas the latter augments one particular primary environment.
+the overall experience of such a system may not be as novel as the vision of parallel reality originally envisaged
+
+however bowing to utility and enjoyment is important for the concept to have a future of fruitful applications
 
 
 
-the mix came out on top and is experientially very similar to AR
+one might want to consider parallel reality to be an extreme case of augmented reality, in which the virtual augmentations are numerous and expansive enough to constitute a complete environment unto itself
 
-considering 3.7.5
 
-environmental aspect vs experiential aspect
 
-this mixed parallel reality is distinct to AR in terms of the environmental aspect, but not really in terms of the experiential aspect
-	except that by having this distinction in the environmental aspect, a system that adopts this mix that seems like AR also has the ability to present the distinct experiential aspect by \textbf{also} allowing the user to transition wholly to one environment at the complete exclusion of the other
+
+
 
 %=========================================================================================================
 
 \section{Future Work}
 
-The introduction of parallel reality in this thesis along with the evaluation of its first involved implementations, which investigated leveraging an existing modality of alternate reality interaction with VTW and explored a novel new style of alternate reality interaction with Mirrorshades, is only the beginning of an extended course of study that will be required to fully understand and come to appreciate the benefits that it can provide as a concept. The following discussion highlights but a few choice avenues that the future investigation of parallel reality would do well to explore and should by no means be considered an exhaustive list of possible sources of extension; after all the \textit{``potential applications of VR are really only limited by the imaginations of talented individuals''}~\cite{Giuseppe2014a}. Since its recent rejuvenation at the hands of Oculus, the field of virtual reality has seen its rate of progress and advancement massively accelerated. With this in mind, the potential of these avenues of further investigation into the parallel reality concept to produce fruitful results is substantial.
+The introduction of parallel reality in this thesis along with the evaluation of its first involved implementations, which investigated leveraging an existing modality of alternate reality interaction with VTW and explored a novel new style of alternate reality interaction with Mirrorshades, is only the beginning of an extended course of study that will be required to fully understand and come to appreciate the benefits that it can provide as a concept. The following discussion highlights but a few choice avenues that the future investigation of parallel reality would do well to explore and should by no means be considered an exhaustive list of possible sources of extension; after all the \textit{``potential applications of VR are really only limited by the imaginations of talented individuals''}~\cite{Giuseppe2014a}. Since its recent rejuvenation at the hands of Oculus, the field of virtual reality has seen its rate of progress and advancement massively accelerated. With this in mind, the potential of these avenues for further investigation into the parallel reality concept to produce fruitful results is substantial.
 
 Most evident is the matter of hardware. The Mirrorshades parallel reality platform used in the user studies presented in this thesis is a somewhat cumbersome package of HMD, laptop, battery pack, smartphone, games console controller and myriad cables, occupying both of the user's hands and requiring them to carry a satchel of not insubstantial size and weight (large enough for an 11`` laptop and around 2.5kg in total). To posit that the cumbersome nature of the platform had a directly detrimental effect upon the quality of experience received by the participants is no stretch of the imagination and improvements in this regard will be required for parallel reality to see deployment and use in anything but controlled laboratory or user study conditions. As discussed in section \ref{mobile-client} we are already beginning to see the advent of hardware platforms that present a much improved basis for parallel reality experiences. A platform such as Samsung Gear VR, perhaps modified with stereoscopic video see-through abilities, would represent a fully contained single unit parallel reality experience, suitable for handing to a user in the same manner that audio guides are given out at many of the world's museums. Google's Cardboard platform\footnote{\url{https://www.google.com/get/cardboard/}} also presents an intriguing possibility for future parallel reality implementations at very low cost, making use of nothing more than a folded piece of cardboard and two plastic lenses combined with any of a wide variety of smartphones to form a rudimentary HMD which users could bring to their eyes to perform a transition into VR and remove when they wish to view their real surroundings. Furthermore, improvements to the performance of the platforms, in terms of the visual acuity of both real and virtual content as well as the accuracy of the positioning and registration, will present beneficial results both to casual users and to experts wishing to use such a modality of interaction for serious study. 
 
@@ -178,8 +185,22 @@ Investigating the application of parallel reality to other domains represents po
 
 In addition to other domains the application of parallel reality systems to more expansive environments should also prove to be a fruitful avenue of investigation. In the Mirrorshades evaluations participants were restricted to the area within St Salvator's chapel, however from a conceptual perspective there is nothing to prevent parallel reality from being deployed on larger scales. Allowing the user of a parallel reality system to move between indoor and outdoor areas would require the integration of multiple positioning systems, at least one for indoor areas and a second for outdoor areas. As the virtual environment grows in tandem with the increasing area of the real world available for the user to roam within a switch from static content stored upon the local client to content dynamically streamed from the cloud would likely be required.
 
-Finally the experience of using a parallel reality system has been assessed in this thesis only in relation to a seated VR experience within a cultural heritage scenario and with a focus upon the presence perspective. This represents only a small foray into the sources of study and evaluation that could (and perhaps should) be applied to parallel reality systems, especially when one considers applications in different domains, on larger scales and with the introduction of other users, both real and virtual, local and remote. Furthermore, the evaluation of parallel reality in this thesis has been based upon experiences with a parallel reality system that features high spatial equivalence (see section \ref{spatial-equivalence}) between its real and virtual environments. The application of parallel reality to scenarios that feature little or no spatial equivalence between their environments will surely open up a wealth of exciting investigations requiring markedly different approaches to both implementation and evaluation.
+Furthermore when considering evaluation, the experience of using a parallel reality system has been assessed in this thesis only in relation to a seated VR experience within a cultural heritage scenario and with a focus upon the presence perspective. This represents only a small foray into the sources of study and evaluation that could (and perhaps should) be applied to parallel reality systems, especially when one considers applications in different domains, on larger scales and with the introduction of other users, both real and virtual, local and remote.
 
+Finally, the evaluation of parallel reality in this thesis has been based upon experiences with a parallel reality system that features high spatial equivalence (see section \ref{spatial-equivalence}) between its real and virtual environments. The application of parallel reality to scenarios that feature little or no spatial equivalence between their environments will surely open up a wealth of exciting investigations requiring markedly different approaches to both implementation and evaluation.
+
+This situation may become particularly pertinent as the promise of VR for social activities grows, possibly bringing us to a near future situation similar to that exemplified by the quote from Neal Stephenson's Snow Crash at the beginning of chapter \ref{chapter-background}; a future world where a multi user 3D virtual environment accessed via HMD, but which has no partner in the real world, commands so much of our attention that people find themselves wanting to be able to switch between one and the other to maintain a presence in each.
+
+In summary, future research into the parallel reality concept would do well to:
+\begin{itemize}
+	\item Investigate its application to other domains, in particular those in which previously established alternate reality techniques have demonstrated success or in which previously established alternate reality techniques were not able to fulfil the hopes and expectations.
+
+	\item Investigate its application over substantially larger environments, requiring adoption of smaller, lighter hardware and position tracking accurate over wide areas.
+
+	\item Evaluate it from perspectives other than presence, perhaps focussing on utility when applied to particular tasks or challenges.
+
+	\item Explore further the value and merit of switching wholly between real and virtual environments, taking into consideration the emergent preference of users toward an AR reminiscent mixed view, identifying where the new ability of parallel reality may improve scenarios that had previously made use of AR.
+\end{itemize}
 %=========================================================================================================
 
 \section{Final Thoughts}
