--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1618,7 +1618,7 @@ Performance of IndoorAtlas was similarly high throughout both the 75/25 scenario
 %=========================================================================================================
 
 \subsection{Stage 2.2 Summary}
-
+\label{stage-2-2-summary}
 This stage of the evaluation investigated the effect of changing the default view of a parallel reality experience from one that displays purely the RW environment to one that instead always includes some aspect of the VR environment, such that the user is at all times perceiving some degree of VR stimuli even when they do not consciously trigger a transition into a non-default view. This addressed the second fundamental aspect of transitions between the constituent environments of a parallel reality platform that were expected to have an effect upon the severity of breaks in presence (see section \ref{design-considerations-for-rw-vr-transitions}). Changing the default view in this manner was shown to be less disruptive, and to have a less negative affect upon the break in presence experienced when performing a transition, than the automated transition (transition 4) employed in the second of the stage 2.1 parallel reality scenarios.
 
 Comparing the parallel reality scenarios from this stage of the evaluation to the second parallel reality scenario from the stage 2.1 evaluation in which transition 4 was used, the IPQ results indicate that the 75/25 scenario reduced SP and REAL to similar levels however the 50/50 scenario resulted in an almost imperceptible decrease in REAL and a noticeable \textit{increase} in SP. However despite the constant presence of VR visuals throughout both 75/25 and 50/50 scenarios, INV was not reduced as much as in the parallel reality scenarios from stage 2.1.
@@ -1646,18 +1646,23 @@ Stage 2.2 further investigated the mix scenario, presenting VR visual stimuli to
 Together, these evaluations explored the two fundamental aspects of transitions between the constituent RW and VR environments of a parallel reality system that were identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct bearing on the severity of the breaks in presence, explained by the extended vacancy problem, associated with these transitions. Considering the findings of these evaluations, and drawing from observations of other aspects of the system and its use, several best practices for future parallel reality implementations are proposed:
 
 \begin{enumerate}
-	\item Both a 100\% RW and a 100\% VR view should be provided, though these do not have to be the default RW and VR positions. A 100\% VR view is diagnostic for situations in which the user wishes to perform deliberate in depth observations of a VR object, while a 100\% RW view is important both for performing similar observations of RW objects but also such that movement in the RW environment can be made as comfortable as possible for the user. Whilst improvements to HMDs and associated video see-through technologies, along with improvements to the accuracy of indoor positioning systems, will undoubtedly mitigate the detrimental effects of walking while using a video see-through HMD based parallel reality system such as Mirrorshades, the ability to revert to a 100\% RW view will ensure that the experience of walking in such a situation is presented at its most comfortable.
-	\item A view that provides less than 100\% RW without the need to keep a control activated should be provided. Presenting VR visuals in this manner such that the user receives VR stimuli even without consciously thinking to perform a transition to VR or a RW/VR mix, has been shown to have a positive effect both upon participant awareness of the VR content and upon the relationship between this content and the RW environment. It also promotes observation of RW vantages that might otherwise only be seen through VR. The balance between RW and VR visuals in such a view needs to be carefully considered, as although reducing RW visuals more in the evaluations led to heightened awareness and understanding of the relationship between the environments, it was the less drastically reduced RW view that was preferred overall by participants. Although this style of interaction with the constituent environments does not capture the experience originally envisaged for the parallel reality concept, its utility proven throughout the user studies indicate its worth.
-	\item A method of transitioning between default RW and VR positions that allows the user to both control the speed of the transition and to stop at any intermediary level between 100\%RW/0\%VR and 0\%RW/100\%VR should be provided. This style of transition was clearly the best received throughout the evaluations and participants used this transition both to control the speed of transitions and to pause at intermediary opacities.
-	\item Where inaccuracies in the positioning solution result in the requirement to perform a large movement of the virtual vantage, this movement should be effected in such a manner that the user does not perceive an unpleasant set of virtual stimuli, such as rapidly moving a large distance through the virtual environment or moving `through' virtual objects. Techniques such as reverting to purely real world visuals, blurring, dimming or similarly obfuscating virtual visuals for movements above a certain threshold distance present simple approaches to addressing this issue. Suitable notification should be presented to the user to explain the situation, as suggested for sensor quality in handheld AR platforms~\cite{Billinghurst2014}.
-
-
-	\item In addition to intelligently handling and recovering from inaccuracies in the indoor positioning solution, every care should be taken to ensure that its normal accuracy is sufficient for the scale of comparisons expected of users and such that the lag is reduced ideally to a level beneath that which the user is capable of perceiving. Having to wait for the virtual position to `catch up' with the real position is a prominently undesirable situation.
-
 	\item The combination of graphical hardware and software environment that produce the visuals displayed to the user during a parallel reality experience need to be carefully picked so as to provide sufficient quality of experience, but need to be balanced against size, weight and heat.
 	
 
 	\item In addition to ensuring sufficient quality of virtual visuals, care should be taken to ensure that the real visuals are also presented with as much clarity as possible. In the case of a video see-through solution, there is great potential for the mediated real view to be substantially worse than that which the user perceives outwith of the parallel reality scenario, which means that the benefits of using the system need to be great in order to justify making the user's experience of their real environment substantially worse.
+	
+	\item Where inaccuracies in the positioning solution result in the requirement to perform a large movement of the virtual vantage, this movement should be effected in such a manner that the user does not perceive an unpleasant set of virtual stimuli, such as rapidly moving a large distance through the virtual environment or moving `through' virtual objects. Techniques such as reverting to purely real world visuals, blurring, dimming or similarly obfuscating virtual visuals for movements above a certain threshold distance present simple approaches to addressing this issue. Suitable notification should be presented to the user to explain the situation, as suggested for sensor quality in handheld AR platforms~\cite{Billinghurst2014}.
+	
+	\item In addition to intelligently handling and recovering from inaccuracies in the indoor positioning solution, every care should be taken to ensure that its normal accuracy is sufficient for the scale of comparisons expected of users and such that the lag is reduced ideally to a level beneath that which the user is capable of perceiving. Having to wait for the virtual position to `catch up' with the real position is a prominently undesirable situation.
+	
+
+	\item Both a 100\% RW and a 100\% VR view should be provided, though these do not have to be the default RW and VR positions. A 100\% VR view is diagnostic for situations in which the user wishes to perform deliberate in depth observations of a VR object, while a 100\% RW view is important both for performing similar observations of RW objects but also such that movement in the RW environment can be made as comfortable as possible for the user. Whilst improvements to HMDs and associated video see-through technologies, along with improvements to the accuracy of indoor positioning systems, will undoubtedly mitigate the detrimental effects of walking while using a video see-through HMD based parallel reality system such as Mirrorshades, the ability to revert to a 100\% RW view will ensure that the experience of walking in such a situation is presented at its most comfortable.
+	\item A view that provides less than 100\% RW without the need to keep a control activated should be provided. Presenting VR visuals in this manner such that the user receives VR stimuli even without consciously thinking to perform a transition to VR or a RW/VR mix, has been shown to have a positive effect both upon participant awareness of the VR content and upon the relationship between this content and the RW environment. It also promotes observation of RW vantages that might otherwise only be seen through VR. The balance between RW and VR visuals in such a view needs to be carefully considered, as although reducing RW visuals more in the evaluations led to heightened awareness and understanding of the relationship between the environments, it was the less drastically reduced RW view that was preferred overall by participants. Although this style of interaction with the constituent environments does not capture the experience originally envisaged for the parallel reality concept, its utility proven throughout the user studies indicate its worth.
+	\item A method of transitioning between default RW and VR positions that allows the user to both control the speed of the transition and to stop at any intermediary level between 100\%RW/0\%VR and 0\%RW/100\%VR should be provided. This style of transition was clearly the best received throughout the evaluations and participants used this transition both to control the speed of transitions and to pause at intermediary opacities.
+	
+
+
+
 
 
 \end{enumerate}
